--- a/react-app/package.json
+++ b/react-app/package.json
@@ -18,7 +18,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.4",
@@ -28,6 +29,7 @@
     "@types/jest": "^29.5.8",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
+    "@types/redux-mock-store": "^1.0.6",
     "@types/testing-library__jest-dom": "^6.0.0",
     "@types/testing-library__react": "^10.2.0",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
@@ -48,6 +50,7 @@
     "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
+    "redux-mock-store": "^1.5.4",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2",
     "vite": "^4.5.0"
